--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -1073,7 +1073,9 @@ description = bug 1363126
 description = Synchronous ping allowing worker thread to confirm actor is created. Necessary to avoid racing with ClientHandle actors on main thread.
 [PRemoteSandboxBroker::LaunchApp]
 description = Synchronous launch of a child process that in turn launches and sandboxes another process. Called on a dedicated thread and targets a dedicated process, so this shouldn't block anything.
-[PWebGL::UpdateCompositableHandle]
+[PWebGL::UpdateLayerCompositableHandle]
+description =
+[PWebGL::UpdateWRCompositableHandle]
 description =
 [PCompositorBridge::PWebGL]
 description =
